fixed issues with label spacing

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -388,7 +388,7 @@ a .vendor-name:active{
 
 .label {
     font-weight: bold;
-    margin: 1em;
+    margin: 1em 1em 0 1em;
 }
 
 #map{
